manifests/accesscontrol-api.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: accesscontrol-api
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - path: /api/accesscontrol
            pathType: Prefix
            backend:
              service:
                name: accesscontrol-api
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: accesscontrol-api
spec:
  selector:
    app: accesscontrol-api
  ports:
    - port: 8080
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accesscontrol-api
spec:
  selector:
    matchLabels:
      app: accesscontrol-api
  replicas: 1
  template:
    metadata:
      labels:
        app: accesscontrol-api
    spec:
      containers:
        - name: accesscontrol-api
          image: ${REGISTRY}/utopiksandcastle/accesscontrol-api:${VERSION}
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
